# TaskMaster

./: .gitignore  README.md  pyproject.toml
app_home/: admin.py  models.py  urls.py  views.py
app_home/migrations/: 0001_initial.py  0002_alter_tasklist_content.py
task_master/: asgi.py  settings.py  urls.py  wsgi.py
templates/home/: home.html
