[tool.poetry]
name = "taskmaster"
version = "0.1.0"
description = "web aplication with Django Framework"
authors = ["Nícolas Albuquerque Ramos <nicolasalbuquerque581@gmail.com>"]
license = "GPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.5"
black = "^23.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
